--- a/Test.App/Test.App.csproj
+++ b/Test.App/Test.App.csproj
@@ -15,6 +15,8 @@
   <ItemGroup>
     <None Remove="Data\street_types.csv" />
     <None Remove="Data\suburbs.csv" />
+    <None Remove="UserControls\AddressControl.xaml" />
+    <None Remove="UserControls\PersonControl.xaml" />
   </ItemGroup>
 
   <ItemGroup>
@@ -74,6 +76,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Factories\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\PersonControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Update="UserControls\AddressControl.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
 
   <!--
